update for mobile index file and added css
i add some css property and tweak some css and HTML to make nice to look good in small size screens link phone. its look responsive..

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         }
 
         h2, h3 {
-            font-size: 22px;
-            margin: 13px 0 7px; 
+            font-size: 18px;
+            margin: 0px 0 15px;
+            padding: 1px;
             font-family: 'Montserrat', sans-serif;  
         }
 
@@ -43,7 +44,7 @@
             line-height: 24px;
             min-height: 24px;
             word-break: break-word;
-            white-space: pre-wrap;
+            /* white-space: pre-wrap; */
         }
 
         .box {
@@ -51,13 +52,13 @@
             border-color: #00D4D0;
             min-height: 50px;
             line-height: 50px;
-            border-radius: 10px;
-            width: 50%;
+            border-radius: 25px;
+            width: 80%;
             margin: 0%;
             padding: 1%;
             position: absolute;
-            right: 25%;
-            left: 25%;
+            right: 315%;
+            left: 10%;
 
         }
 
@@ -109,7 +110,7 @@
             <!-- put your masseg for your followeres -->
             <div class="des" >
                 <h3>
-                Write your message for your instagram followers here!! 
+                Write your message for your instagram followers here!! <br>
                 Follow @dreameramangupta
                 </h3>
             </div>
