--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <!-- put your masseg for your followeres -->
             <div class="des" >
                 <h3>
-                Write your message for your instagram followers here!! <br>
+                Get Free Domain & Hosing With Powerful Hostinger Hosting Offers <br>
                 Follow @dreameramangupta
                 </h3>
             </div>
