--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <!-- put your masseg for your followeres -->
             <div class="des" >
                 <h3>
-                Get Free Domain & Hosing With Powerful Hostinger Hosting Offers <br>
+                Install Our Apps from Play Store and Read our eBooks on Kindel<br>
                 Follow @dreameramangupta
                 </h3>
             </div>
