--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
                     </span>
                 </div> 
             </li>
+           
+            <li>
+                 <div class="box">
+                    <span><i class="icofont-ssl-security"></i>
+                        <a href="https://r.freemius.com/4586/4525871/"><h2>Get Your Free SSL Certificate</h2></a>
+                    </span>
+                </div> 
+            </li>
             
             <li>
                 <div class="box">
