--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
            
             <li>
                  <div class="box">
-                    <span><i class="icofont-ssl-security"></i>
+                    <span><i class="icofont-ssl-security icons"></i>
                         <a href="https://r.freemius.com/4586/4525871/"><h2>Get Your Free SSL Certificate</h2></a>
                     </span>
                 </div> 
