--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
         <ul>
             <li>
                 <div class="box">
-                    <span><i class="icofont-brand-appstore icons"></i><a href="https://rebrand.ly/infinity-ward"><h2>Install Our Apps</h2></a></span>
+                    <span><i class="icofont-brand-appstore icons"></i><a href="https://rebrand.ly/infinity-ward"><h2>Install Your Apps</h2></a></span>
                 </div> 
             </li>
             
             <li>
                 <div class="box">
-                    <span><i class="icofont-ebook icons"></i><a href="https://amzn.to/33tKqr3"><h2>Read Our eBooks</h2></a></span>
+                    <span><i class="icofont-ebook icons"></i><a href="https://amzn.to/33tKqr3"><h2>Read Your eBooks</h2></a></span>
                 </div> 
             </li>
             
